src/tests/Advanced/ShouldFail/out_of_mem.ml
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
let x = ref 0 in
prInt !x
